ADDED MEDIA PLAYER APP OBSERVER

--- a/boringNotch/Localizable.xcstrings
+++ b/boringNotch/Localizable.xcstrings
@@ -324,9 +324,6 @@
         }
       }
     },
-    "Filename.mp4" : {
-
-    },
     "Filter" : {
 
     },
@@ -611,6 +608,9 @@
           }
         }
       }
+    },
+    "Show emojis in notch" : {
+
     },
     "Software updates" : {
       "localizations" : {
